--- a/three.js/2.vite_setup/INSTALLATION/index.html
+++ b/three.js/2.vite_setup/INSTALLATION/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-  <h1 class="bg-purple-500">hey</h1>
+  <!-- <h1 class="bg-purple-500">hey</h1> -->
+   <canvas class="absolute top-0 left-0 w-full h-screen"></canvas>
+   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
