--- a/three.js/8.lights/INSTALLATION/index.html
+++ b/three.js/8.lights/INSTALLATION/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- <h1 class="bg-purple-500">hey</h1> -->
-   <canvas class="absolute top-0 left-0 w-full h-screen"></canvas>
+   <canvas class="canvas absolute top-0 left-0 w-full h-screen"></canvas>
    <script type="module" src="./src/main.js"></script>
 </body>
 </html>
